--- a/nestjs-mall-server/package.json
+++ b/nestjs-mall-server/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
+    "build:doc": "npx compodoc -p tsconfig.json -s",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -22,13 +23,26 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.5.1",
+    "@nestjs/config": "^0.6.1",
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/swagger": "^4.7.11",
+    "@nestjs/typeorm": "^7.1.5",
+    "cli-color": "^2.0.0",
+    "csurf": "^1.11.0",
+    "express-rate-limit": "^5.2.3",
+    "helmet": "^4.4.1",
+    "lodash": "^4.17.20",
+    "mysql": "^2.18.1",
+    "os": "^0.1.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3"
+    "rxjs": "^6.6.3",
+    "swagger-ui-express": "^4.1.6",
+    "typeorm": "^0.2.30"
   },
   "devDependencies": {
+    "@compodoc/compodoc": "^1.1.11",
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
