完成使用MYSQL连接,typeorm迁移,使用配置文件

--- a/nestjs-mall-server/.env
+++ b/nestjs-mall-server/.env
@@ -1,1 +1,9 @@
-TEST=111
+# ----------------------- App Config ---------------------------#
+# [开发环境]
+NODE_ENV=dev
+# [数据库连接]
+DB_HOST=129.211.190.72
+DB_PORT=3306
+DB_USERNAME=root
+DB_PASSWORD=123456
+DB_DATABASE=mall
