--- a/nestjs-mall-server/package.json
+++ b/nestjs-mall-server/package.json
@@ -6,6 +6,15 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "orm:createdb": "node create-database.js",
+    "orm:migrate": "typeorm schema:sync && typeorm migration:run",
+    "orm:migratr:revert": "typeorm migration:revert",
+    "orm:export": "typeorm migration:generate -d src/migrations -n schema",
+    "orm:newfile": "typeorm migration:create -d src/migrations -n refactoring",
+    "orm:show": "typeorm migration:show",
+    "orm:sync": "typeorm schema:sync",
+    "orm:log": "typeorm schema:log",
+    "orm:clean": "typeorm schema:drop",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "build:doc": "npx compodoc -p tsconfig.json -s",
@@ -28,8 +37,11 @@
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/swagger": "^4.7.11",
     "@nestjs/typeorm": "^7.1.5",
+    "class-transformer": "^0.3.2",
+    "class-validator": "^0.13.1",
     "cli-color": "^2.0.0",
     "csurf": "^1.11.0",
+    "dotenv": "^8.2.0",
     "express-rate-limit": "^5.2.3",
     "helmet": "^4.4.1",
     "lodash": "^4.17.20",
