添加商品模块

--- a/nestjs-mall-server/.env
+++ b/nestjs-mall-server/.env
@@ -7,3 +7,9 @@ DB_PORT=3306
 DB_USERNAME=root
 DB_PASSWORD=123456
 DB_DATABASE=mall
+
+# ----------------------- 验证模块配置 ---------------------------#
+# [JWT]
+JWT_SECRET_KEY=secret_key
+JWT_EXPIRATION_DELTA="7 days"
+JWT_AUTH_HEADER_PREFIX=Bearer
