--- a/nestjs-mall-server/package.json
+++ b/nestjs-mall-server/package.json
@@ -6,18 +6,18 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "orm:createdb": "node create-database.js",
-    "orm:migrate": "typeorm schema:sync && typeorm migration:run",
-    "orm:migratr:revert": "typeorm migration:revert",
-    "orm:export": "typeorm migration:generate -d src/migrations -n schema",
-    "orm:newfile": "typeorm migration:create -d src/migrations -n refactoring",
-    "orm:show": "typeorm migration:show",
-    "orm:sync": "typeorm schema:sync",
-    "orm:log": "typeorm schema:log",
-    "orm:clean": "typeorm schema:drop",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "build:doc": "npx compodoc -p tsconfig.json -s",
+    "orm:createdb": "node create-database.js",
+    "orm:generate": "typeorm migration:generate -d src/migrations -n schema",
+    "orm:create": "typeorm migration:create -d src/migrations -n refactoring",
+    "orm:migrate": "typeorm migration:run",
+    "orm:migratr:revert": "typeorm migration:revert",
+    "orm:log": "typeorm schema:log",
+    "orm:show": "typeorm migration:show",
+    "orm:sync": "typeorm schema:sync",
+    "orm:clean": "typeorm schema:drop",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -34,6 +34,8 @@
     "@nestjs/common": "^7.5.1",
     "@nestjs/config": "^0.6.1",
     "@nestjs/core": "^7.5.1",
+    "@nestjs/jwt": "^7.2.0",
+    "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/swagger": "^4.7.11",
     "@nestjs/typeorm": "^7.1.5",
@@ -44,9 +46,13 @@
     "dotenv": "^8.2.0",
     "express-rate-limit": "^5.2.3",
     "helmet": "^4.4.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "mysql": "^2.18.1",
     "os": "^0.1.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
@@ -61,6 +67,8 @@
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
+    "@types/passport-jwt": "^3.0.3",
+    "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
