--- a/nestjs-mall-server/tsconfig.json
+++ b/nestjs-mall-server/tsconfig.json
@@ -2,14 +2,19 @@
   "compilerOptions": {
     "module": "commonjs",
     "declaration": true,
+    "importHelpers": true,
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node",
+    "allowJs": true,
     "target": "es2017",
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "typeRoots": ["node_modules/@types"],
     "incremental": true
-  }
+  },
+  "exclude": ["node_modules", "dist"]
 }
