--- a/nestjs-mall-server/.vscode/settings.json
+++ b/nestjs-mall-server/.vscode/settings.json
@@ -11,6 +11,5 @@
     }
   ],
   "eslint.alwaysShowStatus": true,
-  "workbench.editor.enablePreview": false,
-  "window.zoomLevel": -0.05
+  "workbench.editor.enablePreview": false
 }
