--- a/nestjs-mall-server/.env
+++ b/nestjs-mall-server/.env
@@ -1,6 +1,10 @@
 # ----------------------- App Config ---------------------------#
 # [开发环境]
 NODE_ENV=dev
+
+# Node服务启动监听的端口
+SERVE_LISTENER_PORT=3000
+
 # [数据库连接]
 DB_HOST=129.211.190.72
 DB_PORT=3306
@@ -13,3 +17,14 @@ DB_DATABASE=mall
 JWT_SECRET_KEY=secret_key
 JWT_EXPIRATION_DELTA="7 days"
 JWT_AUTH_HEADER_PREFIX=Bearer
+
+# ------- Swagger相关 ---------------------
+# Swagge Api文档访问路径
+SWAGGER_SETUP_PATH=api-docs
+# 标题及描述
+SWAGGER_UI_TITLE=small mall
+SWAGGER_UI_TITLE_DESC=The mall API description
+# API版本
+SWAGGER_API_VERSION=1.0
+# Swagger Api Prefix
+SWAGGER_ENDPOINT_PREFIX=api/v1
