--- a/nestjs-mall-server/package.json
+++ b/nestjs-mall-server/package.json
@@ -31,13 +31,13 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.5.1",
-    "@nestjs/config": "^0.6.1",
-    "@nestjs/core": "^7.5.1",
+    "@nestjs/common": "^7.6.6",
+    "@nestjs/config": "^0.6.2",
+    "@nestjs/core": "^7.6.6",
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/passport": "^7.1.5",
-    "@nestjs/platform-express": "^7.5.1",
-    "@nestjs/swagger": "^4.7.11",
+    "@nestjs/platform-express": "^7.6.6",
+    "@nestjs/swagger": "^4.7.12",
     "@nestjs/typeorm": "^7.1.5",
     "class-transformer": "^0.3.2",
     "class-validator": "^0.13.1",
@@ -62,22 +62,22 @@
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.11",
     "@nestjs/cli": "^7.5.1",
-    "@nestjs/schematics": "^7.1.3",
-    "@nestjs/testing": "^7.5.1",
+    "@nestjs/schematics": "^7.2.7",
+    "@nestjs/testing": "^7.6.6",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.6",
+    "@types/node": "^14.14.22",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
     "eslint": "^7.12.1",
-    "eslint-config-prettier": "7.1.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.6.3",
     "prettier": "^2.1.2",
-    "supertest": "^6.0.0",
+    "supertest": "^6.1.3",
     "ts-jest": "^26.4.3",
     "ts-loader": "^8.0.8",
     "ts-node": "^9.0.0",
