--- a/nestjs-mall-server/package.json
+++ b/nestjs-mall-server/package.json
@@ -39,15 +39,16 @@
     "@nestjs/platform-express": "^7.6.6",
     "@nestjs/swagger": "^4.7.12",
     "@nestjs/typeorm": "^7.1.5",
+    "@quickts/nestjs-log4js": "^1.0.5",
     "class-transformer": "^0.3.2",
     "class-validator": "^0.13.1",
     "cli-color": "^2.0.0",
-    "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "express-rate-limit": "^5.2.3",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
+    "log4js": "^6.3.0",
     "mysql": "^2.18.1",
     "os": "^0.1.1",
     "passport": "^0.4.1",
