‘‘更新 后台权限认证系统

--- a/nestjs-mall-server/.env
+++ b/nestjs-mall-server/.env
@@ -15,8 +15,8 @@ DB_DATABASE=mall
 # ----------------------- 验证模块配置 ---------------------------#
 # [JWT]
 JWT_SECRET_KEY=secret_key
-JWT_EXPIRATION_DELTA="7 days"
-JWT_AUTH_HEADER_PREFIX=Bearer
+JWT_EXPIRESIN=24h
+JWT_REFRESHEXPIRESIN=2h
 
 # ------- Swagger相关 ---------------------
 # Swagge Api文档访问路径
